--- a/pytest.ini
+++ b/pytest.ini
@@ -2,6 +2,12 @@
 markers =
     development: marks tests as development (deselect with '-m "not development"')
     production: marks tests as production (deselect with '-m "not production"')
-    fast: marks tests as fast (deselect with '-m "not fast"')
-    slow: marks tests as slow (deselect with '-m "not slow"')
-    xfail: marks tests as expected to fail (already built into pytest)
+    fast: marks tests as fast (run with '-m fast')
+    slow: marks tests as slow (run with '-m slow')
+    custom: custom marker example (run with '-m custom')
+    asyncio: marks tests requiring asyncio (run with pytest-asyncio plugin)
+    xfail: marks tests that are expected to fail (handled by pytest itself)
+    xpass: marks tests that unexpectedly pass after being marked xfail (handled by pytest itself)
+    parameters: marks parameterized tests (handled by pytest itself)
+    benchmark: marks tests used for benchmarking (handled by pytest-benchmark plugin)
+    celery: marks tests related to Celery tasks (custom marker, specifics depend on test implementation)
