added a few more examples, updated pytest ini

--- a/pytest.ini
+++ b/pytest.ini
@@ -11,3 +11,8 @@ markers =
     parameters: marks parameterized tests (handled by pytest itself)
     benchmark: marks tests used for benchmarking (handled by pytest-benchmark plugin)
     celery: marks tests related to Celery tasks (custom marker, specifics depend on test implementation)
+    login: dummy login marker for grouping test
+    signup: dummy signup marker for grouping test
+    marker1: combined markers
+    marker2: combined markers
+    special_test: special test for hooks
