Reasons and reqs

--- a/pytest.ini
+++ b/pytest.ini
@@ -16,3 +16,4 @@ markers =
     marker1: combined markers
     marker2: combined markers
     special_test: special test for hooks
+    timeout: test with timeout
